# FastApiWhoreCompany

./: .env  .env.main  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  postgresql.sh  pyproject.toml
api/: Makefile  entrypoint.sh  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 780be31014c4_.py
api/src/: main.py
api/src/models/: characteristics_whore.py  whore.py
api/src/routers/: client_whore.py  whore.py
api/src/schemas/: client_whore.py  whore.py
api/src/service/: characteristics_whore.py  client.py  pimp.py  whore.py
migrations/: env.py
migrations/versions/: 033e52d43c5e_.py  05ae8b55489c_.py  446103cbe119_.py  515e0007d545_initial.py  64b6f58d686e_.py  84faed40981d_.py  8d3dadfa6ffe_.py  a56aabaf8f3d_.py
src/: config.py  main.py
src/SS/: default.py  post.py
src/db/: session.py
src/models/: characteristics.py  characteristics_whore.py  client.py  client_whore.py  pimp.py  type_of_whores.py  whore.py
src/routers/: characteristics.py  characteristics_whore.py  client.py  client_whore.py  pimp.py  whore.py
src/schemas/: characteristics.py  characteristics_whore.py  client.py  client_whore.py  pimp.py  whore.py
src/service/: characteristics.py  characteristics_whore.py  client.py  client_whore.py  pimp.py  whore.py
